added CSS for background image

--- a/templates/main.html
+++ b/templates/main.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="{% static 'styles/app.css' %}" />
     <title>Mo Rezaie</title>
 </head>
-<body>
+<body style="background-image: url({% static 'images/bg.png' %}); background-size: 950px;">
     {% block content %}
     
     {% endblock content %}
