--- a/base/templates/base/projects.html
+++ b/base/templates/base/projects.html
@@ -1,43 +1,10 @@
-{% extends 'main.html' %}
+{% comment %} {% extends 'main.html' %}
 {% load static %}
 
 {% block content %}
 
 <!-- Main Section -->
 
-<div class="container">
-    <div class="layout">
-        <div class="column column--3of3">
-            <div class="devInfo">
-                <h3 class="devInfo__title">Projects</h3>
-                <div class="grid grid--three">
-                    
-                    {% for project in projects %}
-                    <div class="column">
-                        <div class="card project">
-                            <a href="{% url 'project' project.id %}" class="project">
-                                <img class="project__thumbnail" src="{{project.featured_image.url}}"
-                                    alt="project thumbnail" />
-                                <div class="card__body">
-                                    <h3 class="project__title">{{project.title}}</h3>
-                                    <div class="project__tags">
 
-                                        {% for tag in project.tags.all %}
-                                        <span class="tag tag--pill tag--main">
-                                            <small>{{tag}}</small>
-                                        </span>
-                                        {% endfor %}
 
-                                    </div>
-                                </div>
-                            </a>
-                        </div>
-                    </div>
-                    {% endfor %}
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
-
-{% endblock content %}
+{% endblock content %} {% endcomment %}
