--- a/templates/base.html
+++ b/templates/base.html
@@ -1,5 +1,5 @@
 {% load static %}
-<!DOCTYPE html>
+
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -7,15 +7,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/76d03bfb37.js"></script>
     <link rel="stylesheet" href="{% static 'styles/style.css' %}">
-    <title>MyPortfolio</title>
+    <title>P</title>
 </head>
 <body style="background-image: url({% static 'images/bg.png' %}); background-size: 990px;">
     
     {% include 'navbar.html' %}
 
-    {% block content %}
-    
-    {% endblock content %}
+    {% block profileCard %}{% endblock profileCard %}
+
+    {% block projectsCard %}{% endblock projectsCard %}
 
     {% include 'footer.html' %}
 
