--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -7,6 +7,10 @@
   font-family: 'Poppins', sans-serif;
 }
 
+body{
+  margin-top: 20vh;
+}
+
 html {
   scroll-behavior: smooth;
 }
@@ -17,6 +21,7 @@ main{
 
 /* NAVBAR STYLING */
 .navbar{
+  margin-top: -20vh;
   position: fixed;
   z-index: 5;
   width: 100%;
@@ -129,7 +134,6 @@ no space: css for an element with more than 1 class/tag */
     display: block;
   }
 }
-
 /* END NAVBAR STYLING */
 
 /* FOOTER STYLING */
@@ -159,4 +163,24 @@ no space: css for an element with more than 1 class/tag */
 
 .social-list i{
   color: #1b1b1b;
+}
+/* END FOOTER STYLING */
+
+/* PROFILE CARD STYLING */
+.profile-card{
+  background-color: azure;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  width: 100%;
+  height: 100%;
+  max-width: 400px;
+  max-height: 500px;
+  padding: 20px;
+  text-align: center;
+}
+
+.profile-image{
+  width: 120px;
+  height: 120px;
+  object-fit: cover;
+  border-radius: 50%;
 }
