--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -7,25 +7,18 @@
   font-family: 'Poppins', sans-serif;
 }
 
-body{
-  margin-top: 20vh;
-}
-
 html {
   scroll-behavior: smooth;
 }
 
-main{
-  padding: 10px 30px;
+body{
+  margin-top: 10vh;
 }
 
-/* NAVBAR STYLING */
+/* Navbar Styling Start */
+
 .navbar{
-  margin-top: -20vh;
-  position: fixed;
-  z-index: 5;
-  width: 100%;
-  padding: 20px 40px;
+  padding: 20px 30px;
   transition: all 0.4s ease;
 }
 
@@ -43,41 +36,25 @@ main{
   color: white;
 }
 
-.navbar .content{
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-
-.navbar .logo a{
-  color: black;
-  font-size: 30px;
-  font-weight: 600;
-  text-decoration: none;
-}
-
-.navbar .menu-list{
-  display: inline-flex;
-}
-
 .menu-list li{
-  list-style: none;
+  padding: 0px 10px;
 }
 
 .menu-list li a{
   color: black;
-  margin-left: 40px;
   font-size: 18px;
-  text-decoration: none; 
-  transition: all 0.4s ease;
+}
+  
+.menu-list li a:hover{
+  color: silver;
 }
 
-.menu-list li a:hover{
-  color: gray;
+.navbar .logo a{
+  color: black;
+  font-size: 28px;
 }
 
 .icon{
-  color: black;
   font-size: 20px;
   cursor: pointer;
   display: none;
@@ -87,35 +64,45 @@ main{
   color: white;
 }
 
-/* with space: each class/tag 
-has to be inside the parent of the preceding 
-class/tag in here for it to take effect 
-no space: css for an element with more than 1 class/tag */
 .icon.cancel-btn{
   position: absolute;
   right: 30px;
   top: 20px;
 }
 
-/* unless the screen width is at least ...px, do not display */
-@media (max-width: 668px) {
+@media (max-width: 868px) {
   .navbar .menu-list{
     position: fixed;
-    top: 0%;
+    top: 1%;
     right: -100%;
     height: 100vh;
     width: 100%;
     max-width: 240px;
     max-height: 300px;
     display: block;
-    padding: 40px 0;
+    padding: 15px 0;
     text-align: center;
-    background-color: white;
+    background-color: #1b1b1b;
     transition: all 0.4s ease;
   }
-  
-  .navbar.sticky .menu-list{
+
+  .icon{
+    color: black;
+    display: block;
+  }
+
+  .navbar.active{
     background-color: #1b1b1b;
+    transition: all 0.4s ease;
+    box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.5)
+  }
+
+  .navbar.active .icon{
+    color: white;
+  }
+
+  .navbar.active .logo a{
+    color: white;
   }
 
   .navbar .menu-list.active{
@@ -123,18 +110,20 @@ no space: css for an element with more than 1 class/tag */
   }
 
   .navbar .menu-list li{
-    margin-top: 40px;
+    margin-top: 20px;
   }
 
   .navbar .menu-list li a{
+    color: white;
     margin-left: 0px;
   }
-
-  .icon{
-    display: block;
+  
+  .menu-list li a:hover{
+    color: silver;
   }
 }
-/* END NAVBAR STYLING */
+
+/* Navbar Styling End */
 
 /* FOOTER STYLING */
 .footer-card{
@@ -176,6 +165,7 @@ no space: css for an element with more than 1 class/tag */
   max-height: 500px;
   padding: 20px;
   text-align: center;
+  border-radius: 2%;
 }
 
 .profile-image{
