--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,15 +1,24 @@
 {% load static %}
 
-<nav class="navbar">
-    <div class="content">
-        <div class="logo"><a href="#">MSRportfolio</a></div>
-        <ul class="menu-list">
+<nav class="navbar navbar-expand-md fixed-top">
+    <div class="container-fluid">
+        <div class="logo"><a class="navbar-brand" href="#">MSRportfolio</a></div>
+        <ul class="menu-list navbar-nav ms-auto">
             <div class="icon cancel-btn">
                 <i class="fas fa-times"></i>
             </div>
-            <li><a href="#">Projects</a></li>
-            <li><a href="#">About Me</a></li>
-            <li><a href="#">Contact</a></li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Home</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Features</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Pricing</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Disabled</a>
+            </li>
         </ul>
         <div class="icon menu-btn">
             <i class="fas fa-bars"></i>
@@ -25,10 +34,12 @@
 
     menuBtn.onclick = ()=>{
         menu.classList.add("active");
+        navbar.classList.add("active");
     }
 
     cancelBtn.onclick = ()=>{
         menu.classList.remove("active");
+        navbar.classList.remove("active");
     }
 
     window.onscroll = ()=>{
