Menu button property changed

--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -35,11 +35,13 @@
     menuBtn.onclick = ()=>{
         menu.classList.add("active");
         navbar.classList.add("active");
+        menuBtn.classList.add("hide");
     }
 
     cancelBtn.onclick = ()=>{
         menu.classList.remove("active");
         navbar.classList.remove("active");
+        menuBtn.classList.remove("hide");
     }
 
     window.onscroll = ()=>{
