--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -83,7 +83,7 @@ body{
     padding: 15px 0;
     text-align: center;
     background-color: #1b1b1b;
-    transition: all 0.4s ease;
+    transition: all 0.2s ease;
   }
 
   .icon{
@@ -91,9 +91,13 @@ body{
     display: block;
   }
 
+  .icon.hide{
+    display: none;
+  }
+
   .navbar.active{
     background-color: #1b1b1b;
-    transition: all 0.4s ease;
+    transition: all 0.2s ease;
     box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.5)
   }
 
