--- a/base/templates/base/index.html
+++ b/base/templates/base/index.html
@@ -3,30 +3,7 @@
 
 {% block profileCard %}
 
-<main>
-    <div class="">
-        <div class="">
-            <div class="">
-                <div class="profile-card">
-                    <div class="content">
-                        <img src="{{profile.profile_image.url}}" alt="" class="profile-image">
-                        <div class="profile-name">Hi I am {{profile.full_name}}.</div>
-                        <div class="profile-title">Prospect Software Developer</div>
-                        <div class="profile-detail">I like to code in Python</div>    
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    {% comment %} <div class="container">
-        <div class="card__body dev">
-            <img class="avatar avatar--lg" src="" />
-            <h2 class="dev__name">Hi, I am </h2>
-            <p class="dev__title">{{profile.short_bio}}</p>
-            <p class="dev__location">Based in {{profile.location}}</p>
-            <ul class="dev__social">
-
-                {% if profile.social_github %}
+{% comment %} {% if profile.social_github %}
                 <li>
                     <a title="Github" href="{{profile.social_github}}" target="_blank">GitHub<i
                             class=""></i></a>
@@ -41,15 +18,32 @@
                     <a title="LinkedIn" href="{{profile.social_linkedin}}" target="_blank">LinkedIn<i
                             class=""></i></a>
                 </li>
-                {% endif %}
+                {% endif %} {% endcomment %}
 
-            </ul>
-            
-            <a href="{% url 'index' %}" class="btn btn--sub btn--lg">Go to Projects</a>
-            <a href="" class="btn btn--sub btn--lg">Contact</a>
+<div class="profile-card mx-auto">
+    <div class="container">
+        <div class="row">
+            <div class="col-sm">
+                <div class="card">
+                    <div class="img1"><img src="{{profile.profile_background.url}}" alt=""></div>
+                    <div class="img2"><img src="{{profile.profile_image.url}}" alt=""></div>
+                    <div class="profile-name"><h2>Hey, I am {{profile.full_name}}</h2></div>
+                    <div class="profile-title">{{profile.short_bio}}</div>
+                    <div class="profile-location">Based in {{profile.location}}</div>
+                    <div class="profile-socials">
+                        <a href=""><i class="fa-brands fa-linkedin fa-2xl"></i></a>
+                        <a href=""><i class="fa-brands fa-square-github fa-2xl"></i></a>
+                    </div>
+                    <div class="profile-btns">
+                        <div class="profile-btn-proj"><button type="button" class="btn btn-sm">My Projects</button></div>
+                        <div class="profile-btn-cont"><button type="button" class="btn btn-sm">Contact</button></div>    
+                    </div>
+                </div>
+            </div>
         </div>
-    </div> {% endcomment %}
-</main>
+    </div>
+</div>
+
 
 {% endblock profileCard %}
 
