--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -3,21 +3,18 @@
 <nav class="navbar navbar-expand-md fixed-top">
     <div class="container-fluid">
         <div class="logo"><a class="navbar-brand" href="#">MSRportfolio</a></div>
-        <ul class="menu-list navbar-nav ms-auto">
+        <ul class="menu-list navbar-nav">
             <div class="icon cancel-btn">
                 <i class="fas fa-times"></i>
             </div>
             <li class="nav-item">
-                <a class="nav-link" href="#">Home</a>
+                <a class="nav-link" href="#">Projects</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Features</a>
+                <a class="nav-link" href="#">About Me</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Pricing</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Disabled</a>
+                <a class="nav-link" href="#">Contact</a>
             </li>
         </ul>
         <div class="icon menu-btn">
