--- a/templates/index.html
+++ b/templates/index.html
@@ -12,13 +12,17 @@
     <link rel="stylesheet" href="{% static 'styles/style.css' %}">
     <title>MyPortfolio</title>
 </head>
-<body style="background-image: url({% static 'images/bg.png' %}); background-size: 990px;">
+<body>
     
     {% include 'navbar.html' %}
 
-    {% block profileCard %}{% endblock profileCard %}
+    {% block banner-profile %}{% endblock banner-profile %}
 
     {% block projectsCard %}{% endblock projectsCard %}
+
+    {% block about %}{% endblock about %}
+
+    {% block contact %}{% endblock contact %}
 
     {% include 'footer.html' %}
 
